--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>La Ley CZR | Sitio Oficial</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <header>
+        <h1>La Ley CZR</h1>
+        <p>Bienvenido al sitio oficial</p>
+    </header>
+    <main>
+        <img src="assets/portada.jpg" alt="Portada de La Ley CZR" />
+    </main>
+</body>
+</html>
